# Rust-barcode-engine

./: .gitignore  Cargo.toml  README.md
src/: actix.rs  barcodes.rs  main.rs
src/generator/: barcodes.rs
src/gui/gtk3/: AppWindow.glade  AppWindow.glade~  mod.rs
