[package]
name = "barcode-engine"
version = "0.1.0"
authors = ["kopis8 <paul-oj@hotmail.co.uk>"]
edition = "2018"

[dependencies]
barcoders = {version = "0.10.0", features = ["image"]}
qrcode = "0.9.0"
qrcode-generator = "1.0.4"
chrono = "0.4"

# look for the workpace variables
# You can use the depenendcies of the
gtk = { version = "0.2.0", features = ["v3_22"] }